--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <title>Joe Higgs // Web Developer</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <link href="./assets/css/styles.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
   </head>
 
   <body>
     <!-- Navigation Bar -->
     <header>
       <nav class="navbar navbar-expand-lg custom-navbar">
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="https://github.com/nonebula"
             >Joe Higgs</a
           >
@@ -41,24 +41,24 @@
           <div class="collapse navbar-collapse navbar-light" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#about"
-                  ><i class="fas fa-user"></i>About Me</a
-                >
+                <a class="nav-link" aria-current="page" href="#about">
+                  <i class="fas fa-user"></i>About Me
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#skills"
-                  ><i class="fas fa-code"></i>Skills</a
-                >
+                <a class="nav-link" href="#skills">
+                  <i class="fas fa-code"></i>Skills
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#featured-project"
-                  ><i class="fas fa-folder-open"></i>Projects</a
-                >
+                <a class="nav-link" href="#featured-project">
+                  <i class="fas fa-folder-open"></i>Projects
+                </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contact"
-                  ><i class="fas fa-envelope"></i>Contact Me</a
-                >
+                <a class="nav-link" href="#contact">
+                  <i class="fas fa-envelope"></i>Contact Me
+                </a>
               </li>
             </ul>
           </div>
@@ -67,21 +67,19 @@
     </header>
 
     <!-- Jumbo -->
-    <div class="p-5 mb-4 bg-body-tertiary myhero">
-      <div class="container-fluid py-5 myjumbo">
-        <h1 class="display-5 fw-bold">
-          Responsive Web Design at Your Fingertips!
-        </h1>
-        <p class="col-md-12 fs-4 tagline">
-          Search no longer. Click below to download my resume.
-        </p>
-        <a
-          href="./assets/downloads/cv.pdf"
-          download
-          class="btn btn-primary btn-lg jumboButton"
-          >Download Resume</a
-        >
-      </div>
+
+    <div class="container-fluid p-5 myhero text-center pt-5 pb-5">
+      <h1 class="display-4">Responsive Web Design at Your Fingertips!</h1>
+      <p class="lead">Actively Seeking Employment Opportunities</p>
+      <hr class="my-4" />
+      <p>Search no longer. Click below to download my resume.</p>
+      <a
+        class="btn btn-primary btn-lg mt-4 jumboButton"
+        href="./assets/downloads/cv.pdf"
+        download
+        role="button"
+        >Download Resume</a
+      >
     </div>
 
     <main class="page-wrapper">
